# CARL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  config.yaml  main.cpp
configs/: PtzCamerasModels.hpp  camera_config.hpp
include/: config_group.cpp  config_group.hpp  config_map.hpp  config_map.inl  config_value.hpp  config_value.inl  helpers.hpp  iconfig_value.hpp  ilogger.hpp  parsing_extensions.hpp  validation_result.hpp
include/utils/: config_exception.hpp  constraints.hpp  exceptions.hpp  helpers.hpp  parsing_extensions.hpp  utils.hpp
src/: config_value.cpp
